Added support for Emit ePost timing system
Small tweaks

--- a/man/man1/rtl_433.1
+++ b/man/man1/rtl_433.1
@@ -164,7 +164,7 @@ RTL\-SDR device driver is available.
 To set gain for RTL\-SDR use \-g <gain> to set an overall gain in dB.
 .RE
 .RS
-SoapySDR device driver is available.
+SoapySDR device driver is not available.
 .RE
 .TP
 [ \fB\-d\fI ""\fP ]
